--- a/reddit/requirements.txt
+++ b/reddit/requirements.txt
@@ -1,9 +1,8 @@
 flask==2.3.3
-pandas==2.0.3
+pandas==1.5.3          # ✅ Lighter version
 praw==7.7.1
 python-dotenv==1.0.0
 requests==2.31.0
-beautifulsoup4==4.12.2
 openpyxl==3.1.2
 google-generativeai==0.3.2
-lxml==4.9.3
+gunicorn==21.2.0       # ✅ Added for better deployment
