--- a/reddit/vercel.json
+++ b/reddit/vercel.json
@@ -1,8 +1,7 @@
 {
-  "version": 2,
   "builds": [
     {
-      "src": "app.py",
+      "src": "*.py",
       "use": "@vercel/python"
     }
   ],
@@ -11,10 +10,5 @@
       "src": "/(.*)",
       "dest": "/app.py"
     }
-  ],
-  "build": {
-    "env": {
-      "PYTHON_VERSION": "3.11"
-    }
-  }
+  ]
 }
